{{$NEXT}}
    - Set process name with Sys::Prctl if it's available. Unless we're
      running on a perl which calls prctl() for us.
    - Use Dist::Zilla

0.4.4 Fri Mar 12 02:26:44 GMT 2010
    - Allow disabling POE::Component::IRC's flood protection

0.4.3 Wed Jan 20 03:00:24 GMT 2010
    - Add log_notices and log_dcc options

0.4.2 Wed Jan 13 09:29:09 GMT 2010
    - Spurious NAMES replies will not get into the recall buffer now
    - Migrated Makefile.PL over to Module::Install
    - Use YAML::XS for configs instead of Config::Any
    - Set $0 to "bondage: $USER" (or "bondage") so bondage is visible in ps
      and netstat as such

0.4.1 Tue Sep 30 19:23:43 GMT 2008
    - Fixed a serious typo
    - Some pod updates

0.4.0 Tue Sep 30 17:00:29 GMT 2008
    - Don't forward PING/PONG server messages
    - Generate various server replies without contacting the server.
      As a consequence, it should use less traffic and be snappier,
      especially when many/large/busy channels are involved.
    - Added away_poll config option

0.3.3 Sun Sep 28 04:21:50 GMT 2008
    - Fixed crash on client disconnect

0.3.2 Wed Sep 24 20:10:19 GMT 2008
    - Fix race condition related to CAPAB IDENTIFY-MSG
    - Use less CPU while attaching when recall mode is 'all'

0.3.1 Wed Sep 24 19:06:09 GMT 2008
    - Fix bug in recall due to wrong string interpolation
    - More pod improvements
    - More sanity checks on the config file

0.3.0 Wed Sep 24 00:17:00 GMT 2008
    - Handle the CAPAB IDENTIFY-MSG feature smoothly
    - Make recall keep track of channel topic changes
    - Remove a debugging print statement, doh
    - Should detach from the terminal now when not using --debug
    - Moved 'bondage' from bin/ to script/ since it's not a binary
    - Prettified some of the pod
    - Exit cleanly upon getting SIGINT when clients are attached
    - Fix bug in 99-test-pod.t
    - Create the logs/ dir on demand

0.2.5 Tue Mar 11 01:42:08 GMT 2008
    - Fix PM recalling