@@ -1,7 +1,7 @@
 #!/usr/bin/env perl
 
 use strict;
-use warnings;
+use warnings FATAL => 'all';
 use App::Bondage;
 use Digest::MD5 qw(md5_hex);
 use Getopt::Long qw(:config auto_help);
